relay-general/src/pii/snapshots/tests__authorization_scrubbing.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "auXth": "foobar",
    "auth": "[Filtered]",
    "authorization": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "auth": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 6
        }
      },
      "authorization": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 6
        }
      }
    }
  }
}
