relay-general/src/pii/snapshots/tests__breadcrumb_message-2.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "breadcrumbs": {
    "values": [
      {
        "message": "[Filtered]"
      }
    ]
  },
  "_meta": {
    "breadcrumbs": {
      "values": {
        "0": {
          "message": {
            "": {
              "rem": [
                [
                  "remove-keywords",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 68
            }
          }
        }
      }
    }
  }
}
