relay-general/src/pii/snapshots/tests__debug_meta_files_not_strippable.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "debug_meta": {
    "images": [
      {
        "code_file": "foo/bar.txt",
        "debug_file": "foo/bar.txt",
        "type": "macho"
      }
    ]
  }
}
