relay-general/src/pii/snapshots/tests__doesnt_scrub_not_scrubbed.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "test1": {
      "is_authenticated": "[Filtered]"
    },
    "test2": {
      "is_authenticated": "null"
    },
    "test3": {
      "is_authenticated": true
    }
  },
  "_meta": {
    "extra": {
      "test1": {
        "is_authenticated": {
          "": {
            "rem": [
              [
                "@anything:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 6
          }
        }
      }
    }
  }
}
