relay-general/src/pii/snapshots/tests__exclude_fields_on_field_name.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "password": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "password": {
        "": {
          "rem": [
            [
              "@usssn:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
