relay-general/src/pii/snapshots/tests__explicit_fields.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "mystuff": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "mystuff": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 3
        }
      }
    }
  }
}
