relay-general/src/pii/snapshots/tests__explicit_fields_case_insensitive.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "MYSTUFF": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "MYSTUFF": {
        "": {
          "rem": [
            [
              "strip-fields",
              "s",
              0,
              10
            ]
          ],
          "len": 3
        }
      }
    }
  }
}
