relay-general/src/pii/snapshots/tests__extra.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "a_password_array": null,
    "a_password_here": "[Filtered]",
    "a_password_number": null,
    "apiKey": "[Filtered]",
    "api_key": "[Filtered]",
    "foo": "bar",
    "password": "[Filtered]",
    "the_secret": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "a_password_array": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "x"
            ]
          ]
        }
      },
      "a_password_here": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      },
      "a_password_number": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "x"
            ]
          ]
        }
      },
      "apiKey": {
        "": {
          "rem": [
            [
              "remove-keywords",
              "s",
              0,
              10
            ]
          ],
          "len": 10
        }
      },
      "api_key": {
        "": {
          "rem": [
            [
              "remove-keywords",
              "s",
              0,
              10
            ]
          ],
          "len": 10
        }
      },
      "password": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      },
      "the_secret": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      }
    }
  }
}
