relay-general/src/pii/snapshots/tests__odd_keys.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "do not ,./<>?!@#$%^&*())'ßtrip'": "foo",
    "special ,./<>?!@#$%^&*())'gärbage'": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "special ,./<>?!@#$%^&*())'gärbage'": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 3
        }
      }
    }
  }
}
