relay-general/src/pii/snapshots/tests__querystring_as_string.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "request": {
    "query_string": [
      [
        "foo",
        "bar"
      ],
      [
        "password",
        "[Filtered]"
      ],
      [
        "the_secret",
        "[Filtered]"
      ],
      [
        "a_password_here",
        "[Filtered]"
      ],
      [
        "api_key",
        "[Filtered]"
      ]
    ]
  },
  "_meta": {
    "request": {
      "query_string": {
        "1": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "2": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "3": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "4": {
          "1": {
            "": {
              "rem": [
                [
                  "remove-keywords",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        }
      }
    }
  }
}
